2006-04-25  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/EventCmp.py (DisplayChart.on_write_table): Use
	FileChooser dialog.
	* src/plugins/eventcmp.glade: remove unused dialog.

2006-04-25  Don Allingham  <don@gramps-project.org>
	* src/Bookmarks.py: Don't use goto submenu
	* src/GrampsCfg/py: move and rename tabs, change Prefixes for Formats
	* src/ViewManager.py: new config changes, handle exception, enable
	Edit button by default
	* src/GrampsCfg.py: new config changes
	* src/Config/gen_schema_keys.py: new config changes
	* src/gramps_main.py: new config changes

2006-04-25  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Desbrowser.py: Window Management fixes.
	* src/Bookmarks.py: Redraw "Go to bookmark" menu if changes were
	made in the bookmard editor; Use fixed column widths in editor.

	* src/plugins/EventCmp.py: Adapt to RelLib changes.
	* src/GenericFilter.py (GenericFilter.check_and): Correct logic.
	* src/PluginUtils/_PluginStatus.py: Use new set_window.

	* src/Makefile.am: Include BaseDoc in the docmodules list.
	* src/GrampsDb/_GrampsBSDDB.py: Different order of closing.

2006-04-24  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/GrampsDisplay.py: make manual work in Windows

2006-04-24  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: handle data_map during
	reload of the database
	* src/DataViews/_FamilyView.py: Config changes
	* src/ViewManager.py: Config changes
	* src/GrampsDb/_GrampsDbBase.py: Config changes
	* src/Exporter.py: Config changes
	* src/GrampsCfg.py: Config changes
	* src/Config/_GrampsConfigKeys.py: Config changes
	* src/Config/__init__.py: Config changes
	* src/Config/_GrampsGconfKeys.py: Config changes
	* src/Config/Makefile.am: Config changes
	* src/Config/_GrampsIniKeys.py: Config changes
	* src/Config/gen_schema_keys.py: Config changes
	* src/StartupDialog.py: Config changes
	* src/Editors/_EditPrimary.py: Config changes
	* src/Editors/_EditFamily.py: Config changes