@@ -1,4 +1,6 @@
 2006-04-25  Alex Roitman  <shura@gramps-project.org>
+	* src/plugins/PatchNames.py: Adapt to new wm.
+	* src/PluginUtils/_Tool.py (gui_tool): handle exception.
 	* src/plugins/EventCmp.py (DisplayChart.on_write_table): Use
 	FileChooser dialog.
 	* src/plugins/eventcmp.glade: remove unused dialog.
